# YingGuang_ISN_10008

./: .gitignore  CmakeLists.txt  DbManagerWindow.cpp  DbManagerWindow.h  README.md  SplashWidget.cpp  SplashWidget.h  dialog_backdoor.cpp  dialog_backdoor.h  dialog_backdoor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
3rd_app/: .gitignore  备份此文件夹至移动硬盘脚本.bat
3rd_app/00-internal1-sun/: CMakeLists.txt  README.md  SingleInstance_SharedMemory.h  main.cpp  main2.cpp  net_mainwindow.cpp  net_mainwindow.h  net_mainwindow.ui  路径操作.txt
3rd_app/common/: ConfigManager.cpp  ConfigManager.h  pack_definition.h
backup/: MainWindow.cpp  MainWindow.h
database/: data.db  设置proj脚本.bat
